# transka

./: .env.backup  .env.example  .gitignore  CLAUDE.md  README.md  config.py  gui.md  install.bat  install.ps1  main.py  pyproject.toml  requirements.txt  start.bat  start.ps1
src/: __init__.py  deepl_translator.py  google_translator.py  main.py  translator.py
src/transka/: __init__.py  __main__.py  app.py  base_translator.py  config.py  deepl_translator.py  google_translator.py  gui_builder.py  gui_builder_v2.py  hotkey_manager.py  settings_window.py  theme.py  theme_manager.py  translation_workflow.py  translator.py  tray_manager.py
