[project]
name = "deepl-translator"
version = "1.0.0"
description = "Desktop aplikace pro rychlý překlad s DeepL API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "deepl>=1.18.0",
    "pystray>=0.19.5",
    "Pillow>=10.3.0",
    "keyboard>=0.13.5",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.1",
    "googletrans==4.0.0rc1",
]

[project.scripts]
deepl-translator = "transka.app:main"

[tool.uv]
dev-dependencies = []

[tool.setuptools]
packages = ["transka"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
transka = ["assets/*.png"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
